--- a/index1.html
+++ b/index1.html
@@ -5,17 +5,19 @@
 <body>
 <div class="row1">
 <img src="images/load.gif" width="50%"/>
+<img src="https://lh3.googleusercontent.com/proxy/-kuEwgWy0aKMTk0NUhP9W4AJBVxOCb26686RsGoUhJzg5FjQYOinHSiH8xZZIJCnFRtkApaR4soLfB1OkOWhPw" id="play1" onclick="plyVid()" class="center pulse">
 </div>
 <div class="row2">
 	<div class="box2">
 		<div class="rowb">
 			
-<video width="100%" height="170%" autoplay controls>
+<video id="play" width="100%" height="170%" autoplay muted>
   <source src="images/vid2.mp4" type=video/mp4>
   <source src="movie.ogg" type="video/ogg">
 </video>
 <a href="index.html"><img src="images/cont.png" class="none center0" id="next"></a>
 	</div>		
+</div>
 </div>
 <script src="script.js"></script>
 
